# hpcgmres

./: .gitignore  .travis.yml  README.md
examples/cartpole/model/: d_nmpc_model.c  d_nmpc_model.h  s_nmpc_model.c  s_nmpc_model.h  x_nmpc_model.c
examples/cartpole/test/: d_main.c
examples/cartpole/test_double/: CMakeLists.txt  d_main.c  d_main.cpp  main.cpp
examples/cartpole/test_float/: CMakeLists.txt  main.cpp  s_main.c
examples/simulator/: cgmres_simulator.cpp  cgmres_simulator.hpp  d_simulator.cpp  d_simulator.hpp  numerical_integrator.cpp  numerical_integrator.hpp  s_simulator.cpp  s_simulator.hpp  save_simulation_data.cpp  save_simulation_data.hpp
include/: hpcgmres.h
include/cgmres_initializer/: d_cgmres_initializer.h  d_inexact_newton_for_zero_horizon_ocp.h  d_inexact_newton_for_zero_horizon_ocp_mfgmres_args.h  d_mfgmres_for_cgmres_initializer.h  d_zero_horizon_ocp.h  s_cgmres_initializer.h  s_inexact_newton_for_zero_horizon_ocp.h  s_inexact_newton_for_zero_horizon_ocp_mfgmres_args.h  s_mfgmres_for_cgmres_initializer.h  s_zero_horizon_ocp.h
include/common/: d_givens_rotation.h  d_linear_algebra.h  d_memory_manager.h  d_time_varying_smooth_horizon.h  s_givens_rotation.h  s_linear_algebra.h  s_memory_manager.h  s_time_varying_smooth_horizon.h
include/single_shooting_cgmres/: d_mfgmres_for_single_shooting_cgmres.h  d_single_shooting_cgmres.h  d_single_shooting_continuation.h  d_single_shooting_continuation_mfgmres_args.h  d_single_shooting_ocp.h  s_mfgmres_for_single_shooting_cgmres.h  s_single_shooting_cgmres.h  s_single_shooting_continuation.h  s_single_shooting_continuation_mfgmres_args.h  s_single_shooting_ocp.h
src/: Makefile
src/cgmres_initializer/: Makefile  d_cgmres_initializer.c  d_inexact_newton_for_zero_horizon_ocp.c  d_mfgmres_for_cgmres_initializer.c  d_zero_horizon_ocp.c  s_cgmres_initializer.c  s_inexact_newton_for_zero_horizon_ocp.c  s_mfgmres_for_cgmres_initializer.c  s_zero_horizon_ocp.c  x_cgmres_initializer.c  x_inexact_newton_for_zero_horizon_ocp.c  x_zero_horizon_ocp.c
src/common/: Makefile  d_givens_rotation.c  d_linear_algebra.c  d_memory_manager.c  d_mfgmres.c  d_time_varying_smooth_horizon.c  s_givens_rotation.c  s_linear_algebra.c  s_memory_manager.c  s_mfgmres.c  s_time_varying_smooth_horizon.c  x_givens_rotation.c  x_memory_manager.c  x_mfgmres.c  x_time_varying_smooth_horizon.c
src/single_shooting_cgmres/: Makefile  d_mfgmres_for_single_shooting_cgmres.c  d_single_shooting_cgmres.c  d_single_shooting_continuation.c  d_single_shooting_ocp.c  s_mfgmres_for_single_shooting_cgmres.c  s_single_shooting_cgmres.c  s_single_shooting_continuation.c  s_single_shooting_ocp.c  x_single_shooting_cgmres.c  x_single_shooting_continuation.c  x_single_shooting_ocp.c
tests/: CMakeLists.txt  install_lcov.sh
tests/cgmres_initializer/: CMakeLists.txt  d_cgmres_initializer_test.cpp  d_inexact_newton_for_zero_horizon_ocp_test.cpp  d_mfgmres_for_cgmres_initializer_test.cpp  s_cgmres_initializer_test.cpp  s_inexact_newton_for_zero_horizon_ocp_test.cpp  s_mfgmres_for_cgmres_initializer_test.cpp  s_zero_horizon_ocp_test.cpp
tests/common/: CMakeLists.txt  d_linear_algebra_test.cpp  s_linear_algebra_test.cpp  s_time_varying_smooth_horizon_test.cpp
tests/nmpc_model/: CMakeLists.txt
tests/single_shooting_cgmres/: CMakeLists.txt  d_mfgmres_for_single_shooting_cgmres_test.cpp  d_single_shooting_cgmres_test.cpp  d_single_shooting_continuation_test.cpp  d_single_shooting_ocp_test.cpp  s_mfgmres_for_single_shooting_cgmres_test.cpp  s_single_shooting_cgmres_test.cpp  s_single_shooting_continuation_test.cpp  s_single_shooting_ocp_test.cpp
unittest/: CMakeLists.txt
unittest/cgmres_initializer/: CMakeLists.txt  d_cgmres_initializer_test.cpp  d_inexact_newton_for_zero_horizon_ocp_mfgmres_args_test.cpp  d_inexact_newton_for_zero_horizon_ocp_test.cpp  d_mfgmres_for_cgmres_initializer_test.cpp  d_zero_horizon_ocp_test.cpp  s_cgmres_initializer_test.cpp  s_inexact_newton_for_zero_horizon_ocp_mfgmres_args_test.cpp  s_inexact_newton_for_zero_horizon_ocp_test.cpp  s_mfgmres_for_cgmres_initializer_test.cpp  s_zero_horizon_ocp_test.cpp
unittest/cmake/: gtest.cmake
unittest/common/: CMakeLists.txt  d_givens_rotation_test.cpp  d_linear_algebra_test.cpp  d_memory_manager_test.cpp  d_time_varying_smooth_horizon_test.cpp  s_givens_rotation_test.cpp  s_linear_algebra_test.cpp  s_memory_manager_test.cpp  s_time_varying_smooth_horizon_test.cpp
unittest/nmpc_model/: d_nmpc_model_test.cpp  s_nmpc_model_test.cpp
unittest/single_shooting_cgmres/: CMakeLists.txt  s_single_shooting_ocp_test.cpp
